@@ -7,6 +7,10 @@ New features:
 - Add front-end output for content purpose elements
 - Add template for Downloads
 
+Fixes and improvements:
+- Add optional antispam hook to forms
+
+
 ## Romanesco Patterns 0.13.0
 Released on November 15, 2018
 
